# EmotionQuant-glm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: INTEGRATION.md  README.md  settings.json
.claude/commands/: 6a-status.md  a2-check.md  a4-check.md  a6-check.md  doc-check.md  phase-start.md  tdd.md
.claude/hooks/: post_edit_check.py  pre_doc_edit_check.py  pre_edit_check.py  pre_edit_orchestrator.py  session_start.py  test_all_hooks.py  user_prompt_submit.py
.claude/system-prompts/: spec-workflow-starter.md
.reports/: EmotionQuant 系统批判报告（Claude 第四轮 — 细节深挖）.md  EmotionQuant-critique-R1-R31-总结报告-claude-20260209.md  EmotionQuant-critique-R12-claude-20260208.md  EmotionQuant-critique-R15-claude-20260208.md  EmotionQuant-critique-R17-claude-20260208.md  EmotionQuant-critique-R20-claude-20260208.md  EmotionQuant-critique-R22-claude-20260209.md  EmotionQuant-critique-R24-claude-20260209.md  EmotionQuant-critique-R28-claude-20260209.md  EmotionQuant-critique-R31-claude-20260209.md  EmotionQuant-critique-R8-claude-20260207.md  EmotionQuant-critique-R9-claude-20260207.md
.reports/archive-critique-r1-r31-20260210/: EmotionQuant-critique-R1-claude-20260207.md  EmotionQuant-critique-R10-claude-20260208.md  EmotionQuant-critique-R11-claude-20260208.md  EmotionQuant-critique-R13-claude-20260208.md  EmotionQuant-critique-R14-claude-20260208.md  EmotionQuant-critique-R16-claude-20260208.md  EmotionQuant-critique-R18-claude-20260208.md  EmotionQuant-critique-R19-claude-20260208.md  EmotionQuant-critique-R2-claude-20260207.md  EmotionQuant-critique-R21-claude-20260209.md  EmotionQuant-critique-R23-claude-20260209.md  EmotionQuant-critique-R25-claude-20260209.md  EmotionQuant-critique-R26-claude-20260209.md  EmotionQuant-critique-R27-claude-20260209.md  EmotionQuant-critique-R29-claude-20260209.md  (+6 more)
Governance/record/: debts.md  (+2 more)
docs/: module-index.md  naming-conventions.md  system-overview.md
scripts/: __init__.py
src/: __init__.py
tests/: __init__.py
(+112 files in other folders)
